--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 server.port=8080
+
+################
+# Mongodb-Config
+################
+
+#spring.data.mongodb.database=DATABASENAME
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.uri=mongodb://localhost
