--- a/src/main/react/tch19-front/package.json
+++ b/src/main/react/tch19-front/package.json
@@ -9,7 +9,8 @@
     "react-scripts": "^3.2.0",
     "classnames": "^2.2.6",
     "react-datepicker": "^2.10.1",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "react-select": "^3.0.8"
   },
   "devDependencies": {},
   "scripts": {
