--- a/src/main/react/tch19-front/package.json
+++ b/src/main/react/tch19-front/package.json
@@ -10,7 +10,9 @@
     "classnames": "^2.2.6",
     "react-datepicker": "^2.10.1",
     "moment": "^2.24.0",
-    "react-select": "^3.0.8"
+    "react-select": "^3.0.8",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {},
   "scripts": {
