--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ server.port=8080
 # Mongodb-Config
 ################
 
-spring.data.mongodb.database=lonv
-spring.data.mongodb.port=27017
-spring.data.mongodb.uri=mongodb://localhost
+#spring.data.mongodb.database=lonv
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.uri=mongodb://localhost
