--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com</groupId>
     <artifactId>triercityhack19</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1</version>
     <name>TrierCityHack10</name>
     <description>Web Application Boilerplate for Trier City Hack 19</description>
 
